[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/spaceship.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Spaceship.gd" type="Script" id=2]
[ext_resource path="res://Sound/LowExplosion.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/Hit.wav" type="AudioStream" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -4, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color = Color( 0, 0.694118, 0.831373, 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0875 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color = Color( 0, 0.694118, 0.831373, 1 )

[node name="SpaceShip" type="Area2D"]
script = ExtResource( 2 )

[node name="spaceship" type="Sprite" parent="."]
position = Vector2( 0.833984, 5.30518 )
texture = ExtResource( 1 )

[node name="CenterEngine" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0.668167, -7.77633 )
amount = 40
lifetime = 5.0
speed_scale = 5.0
randomness = 1.0
local_coords = false
process_material = SubResource( 2 )

[node name="LeftEngine" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( -7.69871, -12.2887 )
lifetime = 1.5
speed_scale = 5.0
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="RightEngine" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 9.09758, -11.9058 )
lifetime = 1.5
speed_scale = 5.0
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.222717, -112.164 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="MissileHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0.593979, 23.3926, 11.062, -4.00253, 11.062, -10.0161, -10.5423, -9.79337, -10.5423, -4.6707 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="area_entered" from="." to="." method="_on_SpaceShip_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_SpaceShip_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
